--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300;400&family=Raleway:wght@300;400;500;600&display=swap" rel="stylesheet">
 
-    <title>React App</title>
+    <title>Shop</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
